--- a/CudaRayTracer/CudaRayTracer.vcxproj
+++ b/CudaRayTracer/CudaRayTracer.vcxproj
@@ -56,6 +56,7 @@
     <CudaCompile>
       <TargetMachinePlatform>64</TargetMachinePlatform>
       <GenerateRelocatableDeviceCode>true</GenerateRelocatableDeviceCode>
+      <PtxAsOptionV>true</PtxAsOptionV>
     </CudaCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -76,6 +77,7 @@
     <CudaCompile>
       <TargetMachinePlatform>64</TargetMachinePlatform>
       <GenerateRelocatableDeviceCode>true</GenerateRelocatableDeviceCode>
+      <PtxAsOptionV>true</PtxAsOptionV>
     </CudaCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -85,6 +87,7 @@
   <ItemGroup>
     <ClInclude Include="src\Float3.h" />
     <ClInclude Include="src\IntersectionTests.h" />
+    <ClInclude Include="src\OutputWriter.h" />
     <ClInclude Include="src\stb_image_writer.h" />
     <ClInclude Include="src\Structs.h" />
     <ClInclude Include="src\Types.h" />
