colored output + bUseFastRand config option

--- a/rt.ini
+++ b/rt.ini
@@ -5,4 +5,7 @@ imageHeight = 1080
 [RT]
 samplesPerPixel = 128
 maxBounces = 16
-bDenoise = 1 ; 0 = no denoise, 1 = denoise
+bDenoise = 1 		; 0 = no denoise, 1 = denoise
+
+[Optimizations]
+bUseFastRand = 1	; 0 = slow rand, 1 = fast rand
