--- a/rt.ini
+++ b/rt.ini
@@ -9,3 +9,4 @@ bDenoise = 1 		; 0 = no denoise, 1 = denoise
 
 [Optimizations]
 bUseFastRand = 1	; 0 = slow rand, 1 = fast rand
+bSortIntersections = 0	; 0 = don't sort, 1 = sort (by materialIndex) (very slow)
