--- a/rt.ini
+++ b/rt.ini
@@ -2,9 +2,15 @@
 imageWidth = 1920
 imageHeight = 1080
 
+[Camera]
+filmWidth = 1.0f		; default = 1.0f - these two get corrected to fit the aspect ratio of the image
+flimHeight = 1.0f		; default = 1.0f
+filmDistance = 1.0f		; default = 1.0f
+cameraDistance = -12.5f 	; default = -12.5 (should be negative) 
+
 [RT]
-samplesPerPixel = 128
-maxBounces = 16
+samplesPerPixel = 64
+maxBounces = 8
 bDenoise = 1 		; 0 = no denoise, 1 = denoise
 
 [Optimizations]
